monticore-generator/src/test/resources/cocos/invalid/A4002/A4002.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4002;

grammar A4002 extends mc.grammars.types.TestTypes {

  abstract ArrayType extends Name;

}
